Commit on July 17 2022

--- a/frontend/todo/src/app/app.component.html
+++ b/frontend/todo/src/app/app.component.html
@@ -8,4 +8,10 @@
 <app-welcome></app-welcome> -->
 <!-- <app-login></app-login> -->
 <!-- <div>Component Content</div>-->
-<router-outlet></router-outlet> 
+<app-menu></app-menu>
+<br>
+<br>
+<div class="container">
+  <router-outlet></router-outlet> 
+</div>
+<app-footer></app-footer>
