--- a/frontend/todo/src/app/welcome/welcome.component.html
+++ b/frontend/todo/src/app/welcome/welcome.component.html
@@ -1,3 +1,7 @@
-<p>
-  welcome works!
-</p>
+<div>
+  Welcome {{name}}! Welcome to our awesome App.
+</div>
+
+<div>
+  You can manage your todos <a routerLink="/todos">here</a>
+</div>
