--- a/OnlineTestApp/src/app/score/score.component.html
+++ b/OnlineTestApp/src/app/score/score.component.html
@@ -9,7 +9,7 @@
         <div class="mb-auto p-2">
           <h3 class="card-title">{{getTotalScore()}}</h3>
         </div>
-        <div class="p-2" style="overflow-y: scroll">
+        <div class="p-2" style="overflow-y: scroll; border: 2px solid rgb(191, 191, 225)">
                   <div>
                     <div class="flex-row flex-nowrap">
                             <div class="card card-body" *ngFor="let qs of arrQsObj; let i = index;">
